fix: Table virtualized column align right not work

--- a/components/Table/style/index.less
+++ b/components/Table/style/index.less
@@ -280,6 +280,7 @@
 
   &-cell {
     word-break: break-all;
+    width: 100%;
 
     &-indent {
       height: 1px;
